deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-legendary-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-legendary-llm
  template:
    metadata:
      labels:
        app: random-legendary-llm
    spec:
      containers:
        - name: random-legendary-llm
          image: ghcr.io/alban34/random-legendary-llm:dev-81a9504ea2f0282e9f215a91d4cc8361b3de27dc
          imagePullPolicy: Always
          ports:
            - containerPort: 80
