deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-legendary-llm
spec:
  selector:
    app: random-legendary-llm
  ports:
    - port: 80
      targetPort: 80
